[package]
authors = ["Jimmy Cuadra <jimmy@jimmycuadra.com>"]
description = "A Matrix client library."
documentation = "https://docs.rs/ruma-client"
homepage = "https://github.com/ruma/ruma-client"
keywords = ["matrix", "chat", "messaging", "ruma"]
license = "MIT"
name = "ruma-client"
readme = "README.md"
repository = "https://github.com/ruma/ruma-client"
version = "0.1.0"

[dependencies]
futures = "0.1.14"
hyper = "0.11"
ruma-identifiers = "0.11.0"
serde = "1.0.2"
serde_json = "1.0.1"
serde_urlencoded = "0.4.3"
tokio-core = "0.1.6"
url = "1.4.0"

[dependencies.hyper-tls]
git = "https://github.com/hyperium/hyper-tls"
rev = "52f39a2635e90b0c04e37e98b8b959bd6780c34b"

[dependencies.ruma-api]
git = "https://github.com/jplatte/ruma-api"

[dependencies.ruma-client-api]
git = "https://github.com/jplatte/ruma-client-api"
branch = "macros"
