[package]
authors = ["Jimmy Cuadra <jimmy@jimmycuadra.com>"]
description = "A Matrix client library."
documentation = "https://docs.rs/ruma-client"
homepage = "https://github.com/ruma/ruma-client"
keywords = ["matrix", "chat", "messaging", "ruma"]
license = "MIT"
name = "ruma-client"
readme = "README.md"
repository = "https://github.com/ruma/ruma-client"
version = "0.1.0"

[dependencies]
futures = "0.1.14"
hyper = "0.11.1"
ruma-api = "0.4.0"
serde_json = "1.0.2"
serde_urlencoded = "0.5.1"
tokio-core = "0.1.8"
url = "1.5.1"

[dependencies.hyper-tls]
optional = true
version = "0.1.2"

[dependencies.native-tls]
optional = true
version = "0.1.4"

[dependencies.ruma-client-api]
git = "https://github.com/jplatte/ruma-client-api"
branch = "synapse-workarounds"

[dependencies.ruma-identifiers]
git = "https://github.com/jplatte/ruma-identifiers"
branch = "synapse-workarounds"

[dev-dependencies]
futures-await = { git = 'https://github.com/alexcrichton/futures-await' }

[dev-dependencies.ruma-events]
git = "https://github.com/jplatte/ruma-events"
branch = "synapse-workarounds"

[features]
default = ["tls"]
tls = ["hyper-tls", "native-tls"]
